# Pathstitch

./: .gitignore  AGENTS.md  App Icon Template.ai  Impl.md  README.md  issues2.md
.antigravity/: rules.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
Icon/: StchDocument.icns
Icon/Pathstitch Icon Composer.icon/: icon.json
Pathstitch/DxfPreviewer/: DxfParser.swift  DxfPreviewShared.swift  Info.plist  PreviewProvider.swift
Pathstitch/Pathstitch/: ContentView.swift  HelpView.swift  Info.plist  PathstitchApp.swift  PreferencesWindow.swift
Pathstitch/Pathstitch.xcodeproj/: project.pbxproj
Pathstitch/Pathstitch/App/: AboutWindow.swift  AppState.swift  DimensionEngine.swift  Keybinds.swift  PrickingIronLibrary.swift  TemplateLibrary.swift  ToolbarItemViews.swift  ToolbarLayout.swift  UpdaterManager.swift
Pathstitch/Pathstitch/Assets.xcassets/AppIcon.appiconset/: Contents.json
Pathstitch/Pathstitch/Assets.xcassets/Logo.imageset/: Contents.json
Pathstitch/Pathstitch/Assets.xcassets/StchDocument.imageset/: Contents.json
Pathstitch/Pathstitch/Bridge/: PythonBridge.swift
Pathstitch/Pathstitch/Design/: DesignTokens.swift  ToolOptionsKit.swift
Pathstitch/Pathstitch/Modes/BatchMode/: BatchModeView.swift
Pathstitch/Pathstitch/Modes/ConstructMode/: AppState+Construct.swift  ConstructLightingView.swift  ConstructModeView.swift  ConstructModels.swift  ConstructViewport.swift  (+1 more)
Pathstitch/Pathstitch/Onboarding/: TutorialSpotlight.swift
Pathstitch/Pathstitch/Resources/: pricking_irons.json  templates.json
Pathstitch/Pathstitch/Welcome/: PathstitchThumbnailLoader.swift  WelcomeState.swift  WelcomeView.swift  WelcomeWindowController.swift  WindowManager.swift
Pathstitch/PathstitchCLITest/: main.swift
Pathstitch/PathstitchThumbnail/: DxfPreviewShared.swift  Info.plist  StepPreviewShared.swift  ThumbnailProvider.swift
TestFiles/: test.dxf  test.step  test2.dxf  test_cleanup.dxf  test_holes.dxf  test_holes_debug.dxf  test_offset.dxf  test_rect.dxf  test_saddle.dxf  test_updated.dxf  unfolded.dxf  unfolded_combined.dxf
native/foxtrot-triangulate/: Cargo.toml
native/foxtrot-triangulate/src/: surface.rs
native/step_mesh/: Cargo.toml
pathstitch_core/: construct_ops.py  dxf_ops.py  jig_ops.py  make_test_dxf.py  make_test_step.py  manufacture_ops.py  net_unfold.py  requirements.txt  step_ops.py  surface_unfold.py  test_boolean.py  test_construct_ops.py  test_dxf_ops.py  test_edge_ops.py  test_export_options.py  test_fill.py  test_holes.py  test_holes_quality.py  test_leather_ops.py  test_manufacture_ops.py  worker.py
scripts/: make_appcast.sh  package_app.sh
scripts/dmg/: README.md
(+7 files in other folders)
